experiments/logs/res101_voc_2007_trainval__res101.txt.2017-12-22_22-02-09
+ echo Logging output to experiments/logs/res101_voc_2007_trainval__res101.txt.2017-12-22_22-02-09
Logging output to experiments/logs/res101_voc_2007_trainval__res101.txt.2017-12-22_22-02-09
+ set +x
+ '[' '!' -f output/res101/voc_2007_trainval/default/res101_faster_rcnn_iter_250000.ckpt.index ']'
+ [[ ! -z '' ]]
+ CUDA_VISIBLE_DEVICES=0
+ time python ./tools/trainval_net.py --weight data/imagenet_weights/res101.ckpt --imdb voc_2007_trainval --imdbval voc_2007_test --iters 250000 --cfg experiments/cfgs/res101.yml --net res101 --set ANCHOR_SCALES '[8,16,32]' ANCHOR_RATIOS '[0.5,1,2]' TRAIN.STEPSIZE '[50000]'
  File "./tools/trainval_net.py", line 96
    print('Using config:')
        ^
IndentationError: expected an indented block
Command exited with non-zero status 1
0.00user 0.00system 0:00.01elapsed 100%CPU (0avgtext+0avgdata 6904maxresident)k
0inputs+0outputs (0major+853minor)pagefaults 0swaps
